# openeebus

./: CMakeLists.txt  sources.cmake
.github/workflows/: ci.yaml
examples/heat_pump/: cs_lpc_listener.h  hpsrv.c  hpsrv.h  main.c
examples/hems/: eg_lpc_listener.c  eg_lpc_listener.h  hems.c  hems.h
src/cli/: eebus_cli.c  eebus_cli.h  eebus_cli_cs_lp.c  eebus_cli_cs_lp.h  eebus_cli_eg_lp.c  eebus_cli_eg_lp.h  eebus_cli_handler.c.tmp  eebus_cli_handler_interface.h  eebus_cli_interface.h  eebus_cli_internal.h  eebus_cli_ma_mpc.c  eebus_cli_mu_mpc.c  eebus_cli_mu_mpc.h
src/common/eebus_bool/: eebus_bool.c  eebus_bool.h
src/service/api/: eebus_service_config.h
src/ship/api/: ship_mdns_interface.h
src/ship/mdns/: mdns_entry.c  ship_mdns_bonjour.c
src/ship/ship_connection/: ship_connection.c
src/ship/ship_node/: ship_node.c
src/ship/websocket/: http_server.c  websocket.c  websocket_client.c
src/spine/feature/: feature_address_container.c  feature_local.c
src/spine/model/: node_management_types.c
src/spine/node_management/: node_management_remote.c
src/use_case/: use_case.c
src/use_case/actor/cs/: cs_lp.c  cs_lp.h  cs_lp_events.c  cs_lp_events.h  cs_lp_internal.h  cs_lp_listener.c.tmp  cs_lp_public.c
src/use_case/actor/eg/: eg_lp.c  eg_lp.h  eg_lp_events.c  eg_lp_events.h  eg_lp_internal.h  eg_lp_listener.c.tmp  eg_lp_public.c
src/use_case/api/: cs_lp_listener_interface.h  eg_lp_listener_interface.h
tests/: CMakeLists.txt
tests/src/: string_ptr.cpp
tests/src/ship/ship_node/: CMakeLists.txt
tests/src/ship/tls_certificate/: CMakeLists.txt
(+23 files in other folders)
